# Wikipedia-Scraper

./: .gitignore  README.md  justfile  main.py  pyproject.toml  readme.md  requirements.txt
notebooks/: all_in_one.ipynb
src/: wikipedia_scraper.py
src/WikipediaScraper/: __init__.py  visualizations.py  wikipedia_scraper.py
src/combined/: all_in_one.ipynb
src/separated/: wikipedia_scraper.py
