[project]
name = "WikipediaScraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=7.2.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "pip>=26.0.1",
    "requests>=2.33.0",
    "wordcloud>=1.9.6",
]
